# carma-geodetic-lib

./: .editorconfig  CMakeLists.txt  Config.cmake.in  README.md  build.sh  install_dependencies.sh
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  sonar-scanner.yml
cmake/: FindPROJ4.cmake  dependencies.cmake
include/: geodetic.hpp  units_extension.hpp  utm_zone.hpp
src/: geodetic.cpp  utm_zone.cpp
test/: test_geodetic.cpp
